--- a/Capstone/Userinterface/Interface.ipynb
+++ b/Capstone/Userinterface/Interface.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "Ogc4xKHAjD1R"
-      ],
-      "authorship_tag": "ABX9TyMsPJcgfbfVukY73xyOgBz2",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/nat13lla/Capstone/blob/main/Userinterface/Interface.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -31,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8OBcO7Ev3jOz"
+      },
       "source": [
         "# **The F1 Points Predictor**\n",
         "\n",
@@ -40,23 +24,20 @@
         "    width=\"250\" height=\"250\"\n",
         "     style=\"float: center; margin-right: 10px;\" />\n",
         "</p>"
-      ],
-      "metadata": {
-        "id": "8OBcO7Ev3jOz"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## The Functions:"
-      ],
       "metadata": {
         "id": "Ogc4xKHAjD1R"
-      }
+      },
+      "source": [
+        "## The Functions:"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "hZoI2TtqW7rh"
       },
@@ -65,24 +46,40 @@
         "# Imports\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import pickle"
+        "import pickle\n",
+        "from dataclasses import dataclass"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "EbXCPrXHf1kc"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/petercoyle/.virtualenv/python-me3.9/lib/python3.9/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.2.2 when using version 1.4.1.post1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+            "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "# Open the pickeled model file\n",
         "with open('logregmodel.sav', 'rb') as file:\n",
         "    model = pickle.load(file)"
-      ],
-      "metadata": {
-        "id": "EbXCPrXHf1kc"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "nhuO0i7ewsvc"
+      },
+      "outputs": [],
       "source": [
         "c = ['race_year','start_position','race_Italian Grand Prix', 'race_United States Grand Prix',\n",
         "     'country_Azerbaijan', 'country_Bahrain', 'country_Belgium', 'country_Brazil',\n",
@@ -96,15 +93,15 @@
         "     'dn_Thai', 'constructor_Ferrari', 'constructor_McLaren',\n",
         "     'constructor_RB F1 Team', 'constructor_Sauber', 'constructor_Williams',\n",
         "     'cn_French', 'cn_German']"
-      ],
-      "metadata": {
-        "id": "nhuO0i7ewsvc"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "TUQdS5Ns2QHM"
+      },
+      "outputs": [],
       "source": [
         "def driver_input(year):\n",
         "  if year == 2022:\n",
@@ -143,6 +140,43 @@
         "\n",
         "  cn_French = 0 # Alpine\n",
         "  cn_German = 0 # Mercedes\n",
+        "\n",
+        "  @dataclass\n",
+        "  class Driver:\n",
+        "    \"\"\"Dataclass for driver information\"\"\"\n",
+        "    id: int\n",
+        "    name: str\n",
+        "    nationality: str\n",
+        "    cconstructor: str\n",
+        "\n",
+        "\n",
+        "\n",
+        "  driver_data = [Driver(1, 'Albon', 'Thai', 'Williams'), \n",
+        "        Driver(2,'Alonso', 'Spanish', 'Alpine'), \n",
+        "        Driver(3, 'Bottas', 'Finnish', 'Sauber'), \n",
+        "        Driver(4, 'DeVries', 'Dutch', 'Red Bull'),\n",
+        "        Driver(5, 'Gasly', 'French', 'AlphaTauri'), \n",
+        "        Driver(6, 'Hamilton', 'German', 'Mercedes'), \n",
+        "        Driver(7, 'Hulkenberg', 'German', 'Mercedes'),\n",
+        "        Driver(8, 'Latifi', 'Canadian', 'Williams'),\n",
+        "        Driver(9, 'Leclerc', 'Monegasque', 'Ferrari'),\n",
+        "        Driver(10, \"Kevin Magnussen\", \"Danish\", \"Haas\"),\n",
+        "        Driver(11, 'Norris', 'British', 'McLaren'),\n",
+        "        Driver(12, 'Ocon', 'French', 'Alpine'),\n",
+        "        Driver(13, 'Perez', 'Mexican', 'Red Bull'),\n",
+        "        Driver(14, 'Ricciardo', 'Australian', 'McLaren'),\n",
+        "        Driver(15, 'Russell', 'British', 'Mercedes'),\n",
+        "        Driver(16, 'Sainz', 'Spanish', 'Ferrari'),\n",
+        "        Driver(17, 'Mick Schumacher', 'German', 'Haas'),\n",
+        "        Driver(18, 'Stroll', 'Canadian', 'Aston Martin'),\n",
+        "        Driver(19, 'Tsunoda', 'Japanese', 'Red Bull'),\n",
+        "        Driver(20, 'Max Verstappen', 'Dutch', 'Red Bull'),\n",
+        "        Driver(21, 'Vettel', 'German', 'Aston Martin'),\n",
+        "        Driver(22, 'Zhou', 'Chinese', 'Alfa Romeo'),\n",
+        "        Driver(23, 'Lawson', 'New Zealander', 'Red Bull'),\n",
+        "        Driver(24, 'Piastri', 'Australian', 'McLaren'),\n",
+        "        Driver(25, 'Sargeant', 'American', 'Williams')]\n",
+        "\n",
         "\n",
         "  # Converts driver into true\n",
         "  if driver == 1:\n",
@@ -246,16 +280,17 @@
         "          dn_French, dn_German, dn_Japanese, dn_Mexican, dn_Monegasque,\n",
         "          dn_New_Zealander, dn_Spanish, dn_Thai, constructor_Ferrari,\n",
         "          constructor_McLaren, constructor_RB, constructor_Sauber, constructor_Williams,\n",
-        "          cn_French, cn_German]"
-      ],
-      "metadata": {
-        "id": "TUQdS5Ns2QHM"
-      },
-      "execution_count": 4,
-      "outputs": []
+        "          cn_French, cn_German]\n",
+        "  \n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "xghC8DiiDdtM"
+      },
+      "outputs": [],
       "source": [
         "def track_input(year):\n",
         "  if year == 2022:\n",
@@ -396,15 +431,15 @@
         "          country_Italy, country_Japan, country_Mexico, country_Monaco, country_Netherlands,\n",
         "          country_Qatar, country_Saudi, country_Singapore, country_Spain, country_UAE, country_UK,\n",
         "          country_USA, country_United_States ]"
-      ],
-      "metadata": {
-        "id": "xghC8DiiDdtM"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "wt5-LXJr3lMj"
+      },
+      "outputs": [],
       "source": [
         "def predict_points():\n",
         "  print('This model requires Several inputs, please enter one of the options when prompted: ')\n",
@@ -444,6 +479,7 @@
         "\n",
         "\n",
         "  new_df[['prob_no_points','prob_points']] = model.predict_proba(new_df)\n",
+        "  print(  new_df[['prob_no_points','prob_points']])\n",
         "  new_df['y_pred'] = np.where(new_df['prob_no_points']>.5, 0, 1)\n",
         "\n",
         "\n",
@@ -455,28 +491,30 @@
         "    return('There has been an Error please restart to try again.')\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "wt5-LXJr3lMj"
-      },
-      "execution_count": 6,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# The Model:\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "oIw5ievei7o5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "predict_points()"
-      ],
+        "start = int(input(\"\\nPlease input your chosen Driver's start position (1-20): \"))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oIw5ievei7o5"
+      },
+      "source": [
+        "# The Model:\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -484,16 +522,14 @@
         "id": "zUzuioM1BZAh",
         "outputId": "2267b8c2-bfba-471f-ac31-0dab55d7606f"
       },
-      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "This model requires Several inputs, please enter one of the options when prompted: \n",
             "\n",
             "Options: 2022, 2023, 2024\n",
-            "Please input your chosen Season: 2023\n",
             "Choices:\n",
             "1: Abu Dhabi Grand Prix, 2: Australian Grand Prix, 3: Austrian Grand Prix, 4: Azerbaijan Grand Prix, \n",
             "5: Bahrain Grand Prix, 6: Belgian Grand Prix, 7: British Grand Prix, 8: Canadian Grand Prix, 9: Dutch Grand Prix, \n",
@@ -501,21 +537,53 @@
             "16: Miami Grand Prix, 17: Monaco Grand Prix, 24:Qatar Grand Prix, 18: Saudi Arabian Grand Prix, 19: São Paulo Grand Prix, \n",
             "20:Singapore Grand Prix, 21: Spanish Grand Prix, 22: United States Grand Prix\n",
             "\n",
-            "Please enter your chosen Track number: 1\n",
-            "\n",
             "1: albon, 2: alonso, 3: bottas, 4: de_vries, 5: gasly, 6: hamilton,\n",
             "7: hulkenberg, 9: leclerc, 10: kevin_magnussen, 11: norris, 12: ocon,\n",
             "13: perez, 14: ricciardo, 15: russell, 16: sainz,  18: stroll, 19: tsunoda,\n",
             "20: max_verstappen, 22: zhou, 23: lawson, 24: piastri, 25: sargeant\n",
             "\n",
-            "Please enter your chosen driver number: 7\n",
-            "\n",
-            "Please input your chosen Driver's start position (1-20): 8\n",
-            "\n",
-            "We predict that for your chosen values Hulkenberg will not get points :(\n"
+            "We predict that for your chosen values Hamilton will get points! :)\n"
           ]
         }
+      ],
+      "source": [
+        "predict_points()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMsPJcgfbfVukY73xyOgBz2",
+      "collapsed_sections": [
+        "Ogc4xKHAjD1R"
+      ],
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
